[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/RocketBotControl.gd" type="Script" id=1]
[ext_resource path="res://Art/enemies/rocket/rocket_run.png" type="Texture" id=4]
[ext_resource path="res://Art/enemies/rocket/rocket_idle.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 26 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 26 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 26 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 26 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 27 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 27 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10.5921, 20.923 )

[node name="RocketBot" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.19371, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 13 )
animation = "run"
frame = 7
playing = true

[node name="Shooter" type="Node2D" parent="."]

[node name="BotArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotArea"]
shape = SubResource( 14 )

[node name="DespawnTimer" type="Timer" parent="."]

[node name="DamagedTimer" type="Timer" parent="."]
